<resources>
    <string name="app_name">CHAO booking</string>
    <string name="btn_login">登陆</string>
    <string name="tv_forgot_pw">忘记密码</string>
    <string name="password">密码</string>

    <string name="get_code">获取邀请码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_register">注册</string>
    <string name="btn_phone_captcha">获取</string>
    <string name="title_activity_order_fragment">OrderFragment</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="tv_name">姓名</string>
    <string name="tv_age">年龄</string>
    <string name="cache">清除缓存</string>
    <string name="search_hotel">选择酒店</string>
    <string name="login_out">退出登录</string>
    <string name="search_times">选择时间</string>
    <string name="search_bed">选择房型</string>
    <string name="room">酒店详情</string>
    <string name="title">hotel name</string>
    <string name="just_look">随便看看</string>
    <string name="my_money">我的钱包</string>
    <string name="my_order">My Order</string>
    <string name="my_evaluate">我的评价</string>

    <string name="header_map">地图 ></string>
    <string name="header_periphery">周边:</string>
    <string name="header_traffic">交通</string>
    <string name="header_restaurant">餐饮</string>
    <string name="header_entertainment">娱乐</string>
    <string name="header_selling">详情/卖点</string>

    <string name="header_screen">筛选</string>

    <string name="title_collection">收藏</string>
    <string name="title_share">分享</string>
    <string name="title_map">地图</string>

    <string name="item_reserve">预定</string>
    <string name="edit_text_password">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890_</string>
    <string name="edittext_digits">1234567890</string>
    <string name="back">返回</string>
    <string name="my_info">账户</string>
    <string name="my_setting">我的设置</string>
    <string name="times">选择行程</string>
    <string name="cities">选择城市</string>
    <string name="edition">当前版本</string>
    <string name="my">我的</string>
    <string name="receive_message">接受推送</string>
    <string name="about_us">关于我们</string>
    <string name="question">常见问题</string>
    <string name="safe">账户与安全</string>
    <string name="change_pwd">修改密码</string>
    <string name="determine">确定</string>
    <string name="old_pw">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="setting_new_pwd">设置新密码</string>
    <string name="determine_new_pwd">确认新密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="phoneNum">手机号</string>
    <string name="phone">手机</string>
    <string name="verificationcode">验证码</string>
    <string name="input_old_pwd">输入旧密码</string>
    <string name="phone_prefix">+86</string>
    <string name="user_info">My Account</string>
    <string name="avatar">头像</string>
    <string name="user_name">昵称</string>
    <string name="name">昵称</string>
    <string name="tv_user_name">wlda710</string>
    <string name="search_order">查询订单</string>
    <string name="enter_order">请输入订单号</string>
    <string name="my_bill">账单</string>
    <string name="account_balance">My Wallet</string>
    <string name="account_integral">用户积分</string>
    <string name="zero_money">¥0.00</string>
    <string name="zero_integral">0.0</string>
    <string name="all_money">账户余额(CNY)</string>
    <string name="add_money">账户充值</string>
    <string name="settings_feedback">在此写下您宝贵的意见</string>o
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="booking_notice">预定须知</string>
    <string name="hotel_name">酒店名字</string>
    <string name="order_time">订单时间</string>
    <string name="room_name">房间名字</string>
    <string name="room_money">房间价格</string>
    <string name="package_details">套餐详情</string>

    <string name="list_hotel">酒店列表</string>
    <string name="search_result">搜索结果</string>

    <string name="list_city">城市列表</string>

    <string name="search">搜索</string>
    <string name="in_hotel_time">入住日期</string>
    <string name="out_hotel_time">退房日期</string>
    <string name="account_state">状态</string>
    <string name="booking">订单</string>

    <string name="pay">立即支付</string>


    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="amount_of_charge">充值金额</string>
    <string name="Recharge_method">支付方式</string>
    <string name="payment_package">支付宝</string>
    <string name="input_one_hundred">请输入100倍数的金额</string>
    <string name="wechat_pay">微信支付</string>
    <string name="recharge">充值</string>
    <string name="recharge_confirmation">确认充值</string>
    <string name="Detailed">明细</string>
    <string name="about_money">关于余额</string>
    <string name="about_money_one">一些关于余额的介绍，使用范围等</string>
    <string name="about_money_two">暂时先留这么多空具体看之后的文案</string>
    <string name="current_user">当前账户</string>
    <string name="pay_pwd">支付密码</string>
    <string name="service_and_privacy_provisions">服务及隐私条款</string>
    <string name="feedback">反馈意见</string>
    <string name="setting">Settings</string>
    <string name="help">帮助</string>
    <string name="num_point">XX积分</string>
    <string name="already_accumulated">已积累</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_invoice">我的发票</string>
    <string name="invoice">Invoice</string>
    <string name="histroy">历史</string>
    <string name="invoice_amount">可开票金额(CNY)</string>
    <string name="invoice_make_up">开票抬头</string>
    <string name="invoice_value">发票金额</string>
    <string name="irecipient_name">收件人名字</string>
    <string name="contact_information">联系方式</string>
    <string name="mail_address">邮寄地址</string>
    <string name="invoice_remind">请仔细核对上述信息,避免对您带去不必要的麻烦。</string>
    <string name="confirm">确认</string>
    <string name="Total">总价</string>
    <string name="room_type">房型</string>
    <string name="check_in_time">入住时间</string>
    <string name="book_number">预定号</string>
    <string name="cancle_order">取消订单</string>
    <string name="info">Information</string>
    <string name="my_orders">我的订单</string>

    <string name="points">points</string>
    <string name="my_points">我的积分</string>
    <string name="notice">请仔细确认以上行程信息，以免为您的旅途带去不便。</string>
    <string name="booking_prompt">正常办理入住时间为14:00, 18:00后到店请提供信用卡担保</string>

    <string name="city_search">搜索城市</string>
    <string name="regist">还没注册?立即注册</string>
    <string name="sms_code">短信验证码</string>
    <string name="chao_life">CHAO life</string>
    <string name="send_sms_code">发送验证码</string>
    <string name="account_create">Account Creating</string>
    <string name="next">下一步</string>
    <string name="just_login">已有账号,立即登陆</string>
    <string name="skip">skip</string>
    <string name="regist_name">姓名</string>
    <string name="real_name">请填写真实姓名</string>
    <string name="sex">性别</string>
    <string name="pay_order">用于支付订单</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="man">男</string>
    <string name="woman">女</string>


    <string name="come_timer">到店时间</string>
    <string name="card_bank">发卡行</string>
    <string name="card_number">信用卡卡号</string>
    <string name="term_validity">有效期</string>

    <string name="adult">名成人</string>
    <string name="child">名儿童</string>

</resources>
