<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.person.AccountBalanceFragmentView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <sf.hotel.com.hotel_client.view.custom.HotelTitleView
            android:id="@+id/view_title"
            style="@style/view_title"
            app:leftBtnText="@string/back"
            app:rightBtnText="@string/Detailed"
            app:titleText="@string/account_balance" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_balance_height"
            android:background="@color/view_title">

            <TextView
                android:id="@+id/tv_money"
                style="@style/normal_text"
                android:layout_centerVertical="false"
                android:layout_margin="10dp"
                android:text="@string/all_money"
                android:textColor="@color/money_num"
                android:textSize="@dimen/text_mid" />

            <TextView
                android:id="@+id/tv_account_balance"
                style="@style/normal_text"
                android:layout_below="@+id/tv_money"
                android:layout_centerInParent="true"
                android:text="@string/account_balance"
                android:textColor="@color/white"
                android:textSize="@dimen/text_big_size" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/normal_text"
                android:layout_margin="10dp"
                android:text="@string/about_money"
                android:textColor="@color/about_money"
                android:textSize="@dimen/text_mid" />

            <TextView
                style="@style/normal_text"
                android:layout_marginLeft="10dp"
                android:text="@string/about_money_one"
                android:textColor="@color/about_money_one" />

            <TextView
                style="@style/normal_text"
                android:layout_marginLeft="10dp"
                android:text="@string/about_money_one"
                android:textColor="@color/about_money_one" />
        </LinearLayout>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/add_money"
            style="@style/button_green"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/add_money"
            fancy:fb_text="@string/recharge" />
    </LinearLayout>
</FrameLayout>
