<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sf.hotel.com.hotel_client.view.fragment.person.MoneyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <sf.hotel.com.hotel_client.view.custom.HotelTitleView
            android:id="@+id/view_title"
            style="@style/view_title"
            app:leftBtnIcon="@mipmap/ic_title_back_arrow"
            app:rightBtnText="@string/my_bill"
            app:titleText="@string/my_money" />

        <sf.hotel.com.hotel_client.view.custom.PersonalItemView
            android:id="@+id/account_balance"
            style="@style/group_item"
            app:contextText="@string/account_balance" />
    </LinearLayout>
</FrameLayout>
