<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_hotel"
                style="@style/normal_text"
                android:layout_gravity="center"
                android:text="@string/hotel_name" />

            <TextView
                android:id="@+id/tv_time"
                style="@style/normal_text"
                android:layout_gravity="center"
                android:text="@string/order_time" />

            <TextView
                android:id="@+id/tv_state"
                style="@style/normal_text"
                android:layout_width="0dp"
                android:gravity="right|center"
                android:layout_weight="1"
                android:text="@string/account_state" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_room"
                style="@style/normal_text"
                android:layout_gravity="center"
                android:text="@string/room_name" />

            <TextView
                android:id="@+id/tv_money"
                style="@style/normal_text"
                android:layout_weight="1"
                android:gravity="right|center"
                android:text="@string/room_money" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>