<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <sf.hotel.com.hotel_client.view.custom.HotelTitleView
            android:id="@+id/view_title"
            style="@style/view_title"
            app:leftBtnIcon="@mipmap/ic_title_back_arrow"
            app:titleText="@string/user_info" />


        <sf.hotel.com.hotel_client.view.custom.PersonalItemView
            android:id="@+id/piv_use"
            style="@style/group_item"
            android:layout_marginTop="@dimen/fab_margin"
            app:contextText="@string/current_user"
            app:is_show_right_icon="false" />

        <include layout="@layout/item_line" />

        <sf.hotel.com.hotel_client.view.custom.PersonalItemView
            android:id="@+id/piv_pay_pwd"
            style="@style/group_item"
            android:layout_marginTop="@dimen/fab_margin"
            app:contextText="@string/pay_pwd" />

        <include layout="@layout/item_line" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/setting_out"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_margin="@dimen/btn_height"
            fancy:fb_defaultColor="@color/default_button"
            fancy:fb_focusColor="@color/focus_color"
            fancy:fb_text="@string/login_out"
            fancy:fb_textColor="@color/white" />

    </LinearLayout>
</FrameLayout>
