<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/regist_bg"
    tools:context="sf.hotel.com.hotel_client.view.fragment.login.FillInfolationFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <sf.hotel.com.hotel_client.view.custom.HotelTitleView
            android:id="@+id/view_title"
            style="@style/view_title"
            app:rightBtnText="@string/skip"
            app:titleText="@string/account_create" />

        <LinearLayout
            android:id="@+id/lngroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tv_country_phone_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10.0dip"
                    android:src="@mipmap/regist_persion_icon" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_name" />

                <EditText
                    android:id="@+id/et_name"
                    style="@style/login_edit"
                    android:hint="@string/real_name"
                    android:imeOptions="actionNext"
                    android:inputType="text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10.0dip"
                    android:src="@mipmap/regist_persion_icon" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sex" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@drawable/sex_radio"
                        android:checked="true"
                        android:text="@string/man"
                        android:textColor="@color/hit_text" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="@null"
                        android:button="@drawable/sex_radio"
                        android:text="@string/woman"
                        android:textColor="@color/hit_text" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10.0dip"
                    android:src="@mipmap/pay_icon" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_pwd" />

                <EditText
                    android:id="@+id/ed_pay_pwd"
                    style="@style/login_edit"
                    android:hint="@string/pay_order"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10.0dip"
                    android:src="@mipmap/pay_icon" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_pwd" />

                <EditText
                    android:id="@+id/ed_config_pay_pwd"
                    style="@style/login_edit"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </LinearLayout>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_reg_submit"
                style="@style/button_green"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                fancy:fb_defaultColor="@color/default_button"
                fancy:fb_focusColor="@color/focus_color"
                fancy:fb_radius="10dp"
                fancy:fb_text="@string/submit"
                fancy:fb_textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
