<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragment.person.PersonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/head_user"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/item_line" />

                <sf.hotel.com.hotel_client.view.custom.PersonalItemView
                    android:id="@+id/piv_person"
                    style="@style/group_item"
                    app:leftIcon="@mipmap/alipay"
                    app:contextText="@string/my_info" />

                <include layout="@layout/item_line" />

                <sf.hotel.com.hotel_client.view.custom.PersonalItemView
                    android:id="@+id/piv_invoice"
                    style="@style/group_item"
                    app:leftIcon="@mipmap/alipay"

                    app:contextText="@string/my_invoice" />

                <include layout="@layout/item_line" />

                <sf.hotel.com.hotel_client.view.custom.PersonalItemView
                    android:id="@+id/piv_setting"
                    app:leftIcon="@mipmap/alipay"

                    style="@style/group_item"
                    app:contextText="@string/my_setting" />

                <include layout="@layout/item_line" />

                <sf.hotel.com.hotel_client.view.custom.PersonalItemView
                    android:id="@+id/piv_help"
                    app:leftIcon="@mipmap/alipay"

                    style="@style/group_item"
                    app:contextText="@string/help" />

                <include layout="@layout/item_line" />

                <sf.hotel.com.hotel_client.view.custom.PersonalItemView
                    android:id="@+id/piv_about_us"
                    style="@style/group_item"
                    app:leftIcon="@mipmap/alipay"
                    app:contextText="@string/about_us" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
